lox-tests/tests/this/this_in_top_level_function.stderr
ERROR: Cannot use `this` outside of a class
 --> 2:3
  |
2 |   this; // Error at 'this': Can't use 'this' outside of a class.
  |   ^--^
